--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,7 @@ a{color: black;}
 .container--track-and-albums{
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
     flex-wrap: wrap;
 }
 
@@ -175,6 +176,7 @@ a{color: black;}
     flex-wrap: wrap;
     justify-content: space-evenly;
     max-width: 100%;
+    align-items: center;
 }
 
 #news .container{
